# assembly-api-client

./: .env  .gitignore  CHANGELOG.md  README.md  implementation_plan.md  main.py  pyproject.toml  run_codegen.py  verify_install.py
.github/workflows/: release.yml  update_client.yml
assembly_client/: __init__.py  client.py  exceptions.py  models.py  spec_parser.py
scripts/: generate_fixtures.py  update_client.sh
src/assembly_client/: __init__.py  api.py  cli.py  errors.py  models.py  parser.py  sync.py
src/assembly_client/codegen/: generator.py
tests/: test_all_services.py  test_client.py  test_get_all_data.py  test_integration_with_fixtures.py  test_parser.py
tests/fixtures/: OPEN_API_전체_현황.json  국회기록원_업무추진비_집행현황.json  국회입법조사처_알림지_국회입법조사처보.json  국회입법조사처_알림지_홍보책자.json  국회입법조사처_연구보고서_NARS_현안분석.json  국회입법조사처_연구보고서_국정감사관련_보고서.json  국회입법조사처_연구보고서_외국입법_정책_분석.json  국회입법조사처_연구보고서_이슈와_논점.json  국회입법조사처_연구보고서_입법_정책보고서.json  국회입법조사처_연구보고서_입법영향분석보고서.json  국회입법조사처_학술지_입법과_정책.json  법률안_심사_및_처리_계류의안.json  법률안_심사_및_처리_본회의부의안건.json  법률안_심사_및_처리_위원회안_대안.json  법률안_심사_및_처리_의안검색.json  수입징수현황_수입목별.json  수입징수현황_수입항별.json  역대_국회_선거일_의원정수_임기정보.json  영문_국회_소식_및_보도자료.json  영문_국회의원_정보.json  영문_국회의장_연설문.json  영문_국회의장_주요동정.json  영문_국회일정.json  영문_위원회_정보.json  의안_심사정보_예_결산_제외.json  의안_접수목록_OOWY4R001216HX11458.json  의원연맹별_보조금_예산.json  지출집행현황_단위사업별.json
